<resources>
    <string name="app_name">Chess</string>
    <string name="app_name_play">Play</string>
    <string name="app_name_playonline">Play online</string>
    <string name="app_name_setup">Setup</string>
    <string name="app_name_help">Help</string>
    <string name="app_name_import">Import</string>
    <string name="app_name_pgntools">Advanced</string>
    <string name="app_name_save_games">Saved games</string>
    <string name="start_play">Play</string>
    <string name="start_practice">Practice</string>
    <string name="start_puzzles">Puzzles</string>
    <string name="start_hotspotboard">Hotspot board (experimental)</string>
    <string name="start_pgn">Advanced</string>
    <string name="start_ics">Play on Freechess</string>
    <string name="start_boardpreferences">Chess board settings</string>
    <string name="start_lichess">Play on Lichess (experimental)</string>
    <string name="start_cynus">Cynus board (BLE)</string>
    <string name="cynus_intro">CYNUS physical board: scan for a device whose name starts with CYNUS-, tap to connect. The app uses the built-in chess engine (not Stockfish): when the board sends lines starting with fen: or get move, a reply is sent as move &lt;uci&gt;. Uses the same engine as Play mode; avoid running other chess screens at the same time.</string>
    <string name="cynus_scan">Scan</string>
    <string name="cynus_disconnect">Disconnect</string>
    <string name="cynus_devices">Devices</string>
    <string name="cynus_log">Log</string>
    <string name="cynus_perm_ok">Bluetooth permission granted.</string>
    <string name="cynus_perm_denied">Bluetooth permission denied.</string>
    <string name="cynus_bt_disabled">Enable Bluetooth first.</string>
    <string name="cynus_no_le">This device does not support Bluetooth Low Energy.</string>
    <string name="cynus_scanning">Scanning (20 s for CYNUS-*)…</string>
    <string name="cynus_connecting">Connecting… %1$s</string>
    <string name="cynus_connected">GATT connected, discovering services…</string>
    <string name="cynus_gatt_disconnect">GATT disconnected.</string>
    <string name="cynus_char_not_found">Characteristic FFF1 not found on this device.</string>
    <string name="cynus_no_ccc">No CCC descriptor; notifications may still work.</string>
    <string name="cynus_ready">Notifications enabled. Waiting for board…</string>
    <string name="cynus_disconnected">Disconnected.</string>
    <string name="cynus_jni_ended">Position is terminal (mate/draw); no search.</string>
    <string name="cynus_no_best">Engine returned no move.</string>
    <string name="cynus_write_no_conn">Cannot write: not connected.</string>
    <string name="cynus_write_fail">writeCharacteristic returned false.</string>
    <string name="cynus_flip_board">Bot play WHITE</string>
    <string name="cynus_app_engine">Use app\'s engine</string>
    <string name="cynus_export_pgn">Export PGN</string>
    <string name="cynus_pgn_copied">PGN copied to clipboard.</string>
    <string name="globalpreferences">Global settings</string>
    <string name="playpreferences">Play settings</string>
    <string name="playonlinepreferences">Play online settings</string>
    <string name="boardprerences">Board settings</string>
    <string name="gamepreferences">Game settings</string>
    <string name="preferences">Settings</string>
    <string name="pref_wakelock">Use wake lock</string>
    <string name="pref_wakelock_desc">This will prevent your phone going to sleep</string>
    <string name="pref_showCoords">Coordinates</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_desc">Played when your opponent moves</string>
    <string name="pref_speech">Speech</string>
    <string name="pref_speech_desc">Tells the move that was made</string>
    <string name="pref_eco">ECO info</string>
    <string name="pref_eco_desc">Show ECO opening info when available</string>
    <string name="pref_fullscreen">Enable full screen</string>
    <string name="pref_fullscreen_desc">Recommended for small screens and landscape view; elements may fall off the screen otherwise</string>
    <string name="pref_tileset">Square pattern</string>
    <string name="pref_icscustomcommand">Custom commands</string>
    <string name="pref_icscustomcommand_desc">Create your own custom commands</string>
    <string name="pref_icsconsolecharactersize">CONSOLE character size</string>
    <string name="pref_icsconsolecharactersize_desc">Adjust the size of characters in CONSOLE</string>
    <string name="pref_icsautosought">Auto sought</string>
    <string name="pref_icsautosought_desc">Refresh the challenges screen automatically</string>
    <string name="pref_icstimewarning">Time Low Warning</string>
    <string name="pref_icstimewarning_desc">A ticking noise warns you if your time is at Time Warning Amount or less</string>
    <string name="pref_icstimewarningsecs">Time Warning Amount (secs)</string>
    <string name="pref_icstimewarningsecs_desc">How many seconds until time warning starts?</string>
    <string name="prefs_icsendgamedialog">EndGame Dialog</string>
    <string name="prefs_icsendgamesummary">At the end of a game, do you want a save dialog to popup?</string>
    <string name="pref_icsnotification">Notification of New Game</string>
    <string name="prefs_icsnotificationsummary">Lets you know the start of a game with an icon</string>
    <string name="pref_vs_cpu">vs CPU</string>
    <string name="pref_vs_cpu_desc">Play versus the CPU/Engine</string>
    <string name="pref_turn">Side</string>
    <string name="pref_turn_desc">Which side of the board you play</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_night_mode_desc">Force the app into night mode</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_close">Close</string>
    <string name="button_save">Save</string>
    <string name="button_save_copy">Save copy</string>
    <string name="puzzle_show">Show</string>
    <string name="button_engine_play_description">Engine play</string>
    <string name="button_previous_move_description">Previous move</string>
    <string name="button_next_move_description">Next move</string>
    <string name="button_menu_description">Menu</string>
    <string name="button_show_pgn_description">Show PGN</string>
    <string name="button_next_position">Next position</string>
    <string name="button_previous_position">Previous position</string>
    <string name="button_reset_position">Reset position</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_ok">OK</string>
    <string name="title_challenge">Challenge</string>
    <string name="title_error">Error</string>
    <string name="title_offers_abort">Abort request</string>
    <string name="title_offers_takeback">Take back request</string>
    <string name="title_offers_draw">Draw request</string>
    <string name="title_offers_adjourn">Adjourn request</string>
    <string name="title_pick_level">Pick playing level</string>
    <string name="title_menu">Menu</string>
    <string name="title_save_game">Save game</string>
    <string name="title_delete_game">Delete game</string>
    <string name="title_pick_promo">Pick promotion piece</string>
    <string name="title_castle">Castle?</string>
    <string name="title_pick_en_passant">En-passant file</string>
    <string name="title_create_new_line">Create new line?</string>
    <string name="title_chess960_manual_random">Chess 960 :: Manual position nr or random?</string>
    <string name="title_edit_or_delete">Edit or delete?</string>
    <string name="title_edit_command">Edit command</string>
    <string name="menu_help">Help</string>
    <string name="menu_new">New Game</string>
    <string name="menu_new_duck">New Duck (experimental)</string>
    <string name="menu_clip_pgn">Game to clip board</string>
    <string name="menu_fromclip">Game from clip board</string>
    <string name="menu_save_game">Save game to database</string>
    <string name="menu_save_game_to_file">Save game to file</string>
    <string name="menu_save_position_to_file">Save position to file</string>
    <string name="menu_open_position_file">Open position file</string>
    <string name="menu_load_game">Load game</string>
    <string name="menu_open_game">Open game file</string>
    <string name="menu_flip">Rotate</string>
    <string name="menu_setup">Setup board</string>
    <string name="menu_new_command">New Command</string>
    <string name="menu_new_command_message">type \u003cNR\u003e at end of command for no return\nexample:  tell ChessMaster \u003cNR\u003e\n</string>
    <string name="menu_set_clock">Set clock</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_game_settings">Game Settings</string>
    <string name="menu_new_960">New random Fischer / 960</string>
    <string name="pref_show_blindfold">Blindfold</string>
    <string name="options_play_human">Human vs Human</string>
    <string name="options_play_android">Human vs Android</string>
    <string name="options_play_white">White</string>
    <string name="options_play_black">Black</string>
    <string name="options_quiescent_on">Quiescence search on</string>
    <string name="options_quiescent_off">Quiescence search off</string>
    <string name="pref_show_possible_moves">Show moves</string>
    <string name="options_level_time">Level (time)</string>
    <string name="options_level_ply">Level (ply)</string>
    <string name="state_play">in play</string>
    <string name="state_draw_material">draw (material)</string>
    <string name="state_draw_50">draw (50 move rule)</string>
    <string name="state_draw_stalemate">draw (stalemate)</string>
    <string name="state_draw_repeat">draw (3-fold repetition)</string>
    <string name="state_mate">checkmated</string>
    <string name="state_check">check</string>
    <string name="state_black_forfeits_time">black forfeits on time</string>
    <string name="state_white_forfeits_time">white forfeits on time</string>
    <string name="state_black_resigned">black resigned</string>
    <string name="state_white_resigned">white resigned</string>
    <string name="state_draw_agreement">draw by agreement</string>
    <string name="choice_level_1">1 sec</string>
    <string name="choice_level_2">2 sec </string>
    <string name="choice_level_3">4 sec</string>
    <string name="choice_level_4">8 sec (average) </string>
    <string name="choice_level_5">10 sec</string>
    <string name="choice_level_6">20 sec</string>
    <string name="choice_level_7">30 sec (experienced) </string>
    <string name="choice_level_8">1 minute</string>
    <string name="choice_level_9">5 minutes</string>
    <string name="choice_level_10">15 minutes</string>
    <string name="opening_trainer_status_initial">Select a move to start training.</string>
    <string name="opening_trainer_hint">Hint</string>
    <string name="opening_trainer_undo">Undo</string>
    <string name="opening_trainer_restart">Restart</string>
    <string name="opening_trainer_exit">Exit</string>
    <string name="opening_trainer_study_line_label">Chapter: %1$s (%2$d/%3$d)&#10;Line: %4$d/%5$d</string>
    <string name="opening_trainer_auto_next">Auto Next</string>
    <string name="opening_trainer_next">Next</string>
    <string name="opening_trainer_shuffle">Shuffle</string>
    <string name="opening_import_loading">Loading studies…</string>
    <string name="opening_import_from_url">Import from URL</string>
    <string name="opening_import_log_title">Progress log</string>
    <string name="opening_import_log_initial">Waiting…</string>
    <string name="opening_import_log_copy">Copy</string>
    <string name="opening_import_log_clear">Clear</string>
</resources>