<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/root_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dip">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="1dip"
            android:layout_marginLeft="16dp">

            <include
                android:id="@+id/includeboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/EvalBar"
                android:layout_marginStart="4dp"
                layout="@layout/chessboard" />

            <jwtc.android.chess.views.EvalBarView
                android:id="@+id/EvalBar"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/includeboard"
                android:layout_alignBottom="@id/includeboard"
                android:layout_marginEnd="4dp" />

            <jwtc.android.chess.views.OpeningLineProgressView
                android:id="@+id/OpeningLineProgress"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_below="@id/includeboard"
                android:layout_alignStart="@id/includeboard"
                android:layout_alignEnd="@id/includeboard"
                android:layout_marginTop="2dp" />

            <TextView
                android:id="@+id/TextViewLineDoneOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/includeboard"
                android:layout_alignBottom="@id/includeboard"
                android:layout_alignStart="@id/includeboard"
                android:layout_alignEnd="@id/includeboard"
                android:gravity="center"
                android:text="WELLDONE!!"
                android:textStyle="bold"
                android:textSize="34sp"
                android:textColor="#FFFFFFFF"
                android:shadowColor="#CC000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:visibility="gone" />
        </RelativeLayout>

        <include layout="@layout/opening_trainer_controls"/>

        <LinearLayout
            android:id="@+id/OpeningTrainerControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="4dp">

            <Button
                android:id="@+id/ButtonOpeningHint"
                style="@style/ChessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_trainer_hint" />

            <Button
                android:id="@+id/ButtonOpeningUndo"
                style="@style/ChessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:visibility="gone"
                android:text="@string/opening_trainer_undo" />

            <Button
                android:id="@+id/ButtonOpeningRestart"
                style="@style/ChessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/opening_trainer_restart" />

            <Button
                android:id="@+id/ButtonOpeningExit"
                style="@style/ChessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/opening_trainer_exit" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextViewOpeningTrainerStudyLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/opening_trainer_study_line_label"
            android:visibility="gone"
            android:paddingTop="6dp"
            android:paddingBottom="2dp"/>

        <LinearLayout
            android:id="@+id/OpeningTrainerStudyLineControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="2dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/SwitchAutoNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/opening_trainer_auto_next"
                android:checked="true"/>

            <Button
                android:id="@+id/ButtonOpeningNextLine"
                style="@style/ChessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/opening_trainer_next"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/SwitchShuffleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/opening_trainer_shuffle"
                android:checked="false"/>
        </LinearLayout>

        <ScrollView
            android:id="@+id/ScrollViewOpeningTrainerStatus"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="6dp"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/TextViewOpeningTrainerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/opening_trainer_status_initial"
                android:paddingTop="6dp"
                android:paddingBottom="4dp" />
        </ScrollView>
    </LinearLayout>

</ScrollView>

